Bug 92639 - Recent Files not shown in "Start Center" thumbnails and "File/Recent Documents" menu
Summary: Recent Files not shown in "Start Center" thumbnails and "File/Recent Document...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other Windows (All)
: highest normal
Assignee: Stephan Bergmann
URL:
Whiteboard: target:5.1.0
Keywords: bibisectRequest, regression
Depends on:
Blocks:
 
Reported: 2015-07-09 05:39 UTC by tommy27
Modified: 2016-10-25 19:17 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tommy27 2015-07-09 05:39:53 UTC
tested under Win7 x64 and Win8.1 x64

very recent regression...

LibO fails to display recent files either in the start center thumbnails screen or in the "File/Recent Documents" menu

last working version is:
5.1.0.0.alpha1+ (x64)
Build ID: 0251e61640b94094918406b33ee7b05564409feb
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2015-07-06_23:45:07
Locale: en-US (it_IT)

first one I saw the regression is:
5.1.0.0.alpha1+
Build ID: 022331e8ddfa1b0b95cba66a322fb244b4c1cad0
TinderBox: Win-x86@39, Branch:master, Time: 2015-07-08_07:22:58
Locale: en-US (it_IT)

and persists in latest:
5.1.0.0.alpha1+
Build ID: d3b6f3790953bdfeaeebcd3ba9ec370d94ca4ebf
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-07-09_00:11:55
Locale: en-US (it_IT)

should be a very small committ range. easy to bibisect.
Comment 1 Maxim Monastirsky 2015-07-09 08:16:32 UTC
Regression of:

commit 375f9460d99a0e2c366318edcc41d64d6170286e
Author: Stephan Bergmann <sbergman@redhat.com>
Date:   Tue Jul 7 19:09:03 2015 +0200

    Validate names of elements added via the API
    
    Change-Id: I052f8ca6a8788665acb1bf87456f7cc67d64c365

@Stephan: Could you have a look please? Thanks. (The problem is that names of history items are actually file URLs.)
Comment 2 Stephan Bergmann 2015-07-09 14:57:31 UTC
Maxim, did you verify that the issue can be reproduced with
Comment 3 Stephan Bergmann 2015-07-09 14:58:55 UTC
(In reply to Stephan Bergmann from comment #2)
> Maxim, did you verify that the issue can be reproduced with

ignore that junk; I do know what the problem is
Comment 4 Commit Notification 2015-07-13 12:08:58 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e80df0d58ba32e3041ff9c8cdea9c617ea7e633b

tdf#92639: Slashes are allowed in set member names, of course

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 V Stuart Foote 2015-07-14 13:03:10 UTC
Functional again on Windows 7 sp1 64-bit en-US with
Version: 5.1.0.0.alpha1+ (x64)
Build ID: 8de7d44f96252e97e224d42466698114370dbaa3
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2015-07-13_21:43:47
Locale: en-US (en_US)
Comment 6 Robinson Tryon (qubit) 2015-12-17 09:18:16 UTC Comment hidden (obsolete)
Comment 7 Gary 2016-05-06 08:18:29 UTC
Menu "File | Recent Documents" only shows the text "No Documents"

Version: 5.1.2.2 (x64)
Build ID: d3bf12ecb743fc0d20e0be0c58ca359301eb705f
CPU Threads: 2; OS Version: Windows 6.19; UI Render: default; 
Locale: en-ZA (en_ZA)




(In reply to Commit Notification from comment #4)
> Stephan Bergmann committed a patch related to this issue.
> It has been pushed to "master":
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=e80df0d58ba32e3041ff9c8cdea9c617ea7e633b
> 
> tdf#92639: Slashes are allowed in set member names, of course
> 
> It will be available in 5.1.0.
> 
> The patch should be included in the daily builds available at
> http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
> information about daily builds can be found at:
> http://wiki.documentfoundation.org/Testing_Daily_Builds
> Affected users are encouraged to test the fix and report feedback.
Comment 8 Maxim Monastirsky 2016-05-06 08:48:29 UTC
(In reply to Gary from comment #7)
> Menu "File | Recent Documents" only shows the text "No Documents"
Please open a new bug. Never reopen old bugs.
Comment 9 Gary 2016-05-06 09:45:10 UTC
Apologies for re-opening. Will do so in future.

Fixed as follows :
(from https://wiki.documentfoundation.org/UserProfile)

go to
C:\Users\<username>\AppData\Roaming\LibreOffice\4\user

Rename registrymodifications.xcu as registrymodifications_old.xcu

Opening Libreoffice creates a new registrymodifications.xcu file, and the recent documents are listed