tdf#92639: Slashes are allowed in set member names, of course

Change-Id: I30944fe9611e83566c891a7d1461ad02979daddd